feat: add CRUD and Mock data
기본 CRUD를 위한 샘플 데이터, Mutation 추가

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "1eedaegon<d8726243@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "graphql-yoga": "^1.18.3"
+    "graphql-yoga": "^1.18.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.10",
